# hey.thing

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
debug_tools/: debug_db.rs  debug_db_raw.rs  debug_delta.rs  fix_db.rs
docs/: lang_plugin_tutorial.md  roadmap.md  technical_spec.md
src/: lib.rs  main.rs  tests.rs
src/cmd/: branch.rs  get.rs  hydrate.rs  import.rs  init.rs  lang.rs  lock.rs  merge.rs  mod.rs  rewind.rs  save.rs  setup.rs  shift.rs  show.rs  sweep.rs  sync.rs  undo.rs  verb.rs  verify.rs
src/core/: ast_plugin.rs  config.rs  journal.rs  mod.rs  object_model.rs  paths.rs  sync.rs  verb_plugin.rs
src/crypto/: auth.rs  hash.rs  mod.rs
src/plugins/: lang_registry.rs  mod.rs  verb_registry.rs  wasm_engine.rs
src/storage/: chunker.rs  compression.rs  delta.rs  kv_store.rs  mod.rs
src/tui/: conflict_resolver.rs
tests/: find_corrupt.rs  test_branch.rs  test_configthing.rs  test_crypto_merge.rs  test_import.rs  test_init.rs  test_json.rs  test_rewind.rs  test_save.rs  test_setup.rs  test_shift.rs  test_show.rs  test_sync.rs  test_undo.rs
