[package]
name = "hey-thing"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core dependencies will go here (blake3, sled, etc.)
blake3 = "1.5"
sled = "0.34"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.4"
