[package]
name = "hey-thing"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core dependencies will go here (blake3, sled, etc.)
blake3 = "1.5"
sled = "0.34"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.4"
fastcdc = "3.1"
zstd = "0.13"
reqwest = { version = "0.12", features = ["json", "blocking"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
hex = "0.4"
similar = "2.4"
wasmtime = "42.0.1"
directories = "6.0.0"
wasmtime-wasi = "42.0.1"
[[bin]]
name = "hey"
path = "src/main.rs"

[lib]
name = "hey_thing"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3.10"
